--- a/accented_characters/bibliography_escaped.bib
+++ b/accented_characters/bibliography_escaped.bib
@@ -1,5 +1,5 @@
 @article{SampleTitle2016,
-	title = "This is sample title only \{\\k{A}\} \{\\L{}\}",
+	title = "This is sample title only \{\k{A}\} \{\L{}\}",
 	journal = "Some journal",
 	volume = "99",
 	number = "",
@@ -7,13 +7,13 @@
 	year = "2018",
 	note = "This is fake",
 	url = "http://letmegooglethat.com/",
-	author = "Mateusz K\\k{e}dzior and \\.{Z}\\k{a}\\'{c}\\l{} \\'{Z}\\k{e}\\'{n}",
+	author = "Mateusz K\k{e}dzior and \.{Z}\k{a}\'{c}\l{} \'{Z}\k{e}\'{n}",
 	keywords = "keywordC",
 	keywords = "Keyword D",
 }
 
 @article{OtherTitle2010,
-	title = "{{This is different \\k{A} title only}}",
+	title = "{{This is different \k{A} title only}}",
 	journal = "Some journal",
 	volume = "150",
 	number = "",
@@ -21,8 +21,8 @@
 	year = "2020",
 	note = "This is fake",
 	url = "http://letmegooglethat.com/",
-	author = "Mateusz K\\k{e}dzior and \\.{Z}\\k{a}\\'{c}\\l{} \\'{Z}\\k{e}\\'{n}",
-	keywords = "keyword\\k{A}",
-	keywords = "Keyword \\'{Z}",
+	author = "\.{Z}\k{a}\'{c}\l{} \'{Z}\k{e}\'{n}",
+	keywords = "keyword\k{A}",
+	keywords = "Keyword \'{Z}",
 }
 
